<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:background="#eee"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/copyright" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="35sp" />

    </LinearLayout>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_author"
            android:textColor="#000"
            android:textSize="10dp" />

    <Button
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_text"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:onClick="welcomeLogin" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/login_tip"
            android:textSize="14sp"
            android:textColor="#444" />

    <Button
            android:id="@+id/main_regist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/register_text"
            android:textColor="#000000"
            android:textSize="18sp"
            android:onClick="welcomeRegister"  />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/register_tip"
            android:textSize="14sp"
            android:textColor="#444"  />

</LinearLayout>

